--- a/3.Quantidade-de-pessoas-por-municipio-que-possuem-covid-19/Casos_Covid19_Brasil.ipynb
+++ b/3.Quantidade-de-pessoas-por-municipio-que-possuem-covid-19/Casos_Covid19_Brasil.ipynb
@@ -72,7 +72,7 @@
       "metadata": {
         "id": "ystQ5QaFvhkr",
         "colab_type": "code",
-        "outputId": "20414950-722c-46e3-b692-d75eb315dde6",
+        "outputId": "51b909ad-24a1-4cc6-fcdb-18358313e99a",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -83,7 +83,7 @@
         "data_brasil.rename(columns={\"city_ibge_code\":\"codigo_ibge\",\"state\":\"sigla_state\",\"estimated_population_2019\":\"population\"},inplace = True)\n",
         "data_brasil.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -124,33 +124,33 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>2020-04-01</td>\n",
-              "      <td>SC</td>\n",
+              "      <td>2020-04-02</td>\n",
+              "      <td>RR</td>\n",
               "      <td>NaN</td>\n",
               "      <td>state</td>\n",
-              "      <td>247</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>21</td>\n",
+              "      <td>26</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>13</td>\n",
               "      <td>True</td>\n",
-              "      <td>7164788.0</td>\n",
-              "      <td>42.0</td>\n",
-              "      <td>3.44742</td>\n",
-              "      <td>0.0081</td>\n",
+              "      <td>605761.0</td>\n",
+              "      <td>14.0</td>\n",
+              "      <td>4.29212</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>2020-03-31</td>\n",
-              "      <td>SC</td>\n",
+              "      <td>2020-04-01</td>\n",
+              "      <td>RR</td>\n",
               "      <td>NaN</td>\n",
               "      <td>state</td>\n",
-              "      <td>235</td>\n",
-              "      <td>2.0</td>\n",
-              "      <td>20</td>\n",
+              "      <td>26</td>\n",
+              "      <td>0.0</td>\n",
+              "      <td>12</td>\n",
               "      <td>False</td>\n",
-              "      <td>7164788.0</td>\n",
-              "      <td>42.0</td>\n",
-              "      <td>3.27993</td>\n",
-              "      <td>0.0085</td>\n",
+              "      <td>605761.0</td>\n",
+              "      <td>14.0</td>\n",
+              "      <td>4.29212</td>\n",
+              "      <td>NaN</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
@@ -158,8 +158,8 @@
             ],
             "text/plain": [
               "         date sigla_state  ... confirmed_per_100k_inhabitants death_rate\n",
-              "0  2020-04-01          SC  ...                        3.44742     0.0081\n",
-              "1  2020-03-31          SC  ...                        3.27993     0.0085\n",
+              "0  2020-04-02          RR  ...                        4.29212        NaN\n",
+              "1  2020-04-01          RR  ...                        4.29212        NaN\n",
               "\n",
               "[2 rows x 12 columns]"
             ]
@@ -186,19 +186,19 @@
       "metadata": {
         "id": "zysl_XG6vwF0",
         "colab_type": "code",
-        "outputId": "ee57e97f-4852-4c84-b8f1-05acc67469d5",
+        "outputId": "ff17f7fc-7123-4d4c-bbad-d81bc14e6a5b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
         }
       },
       "source": [
-        "city_lat_long =  pd.read_csv(\"https://raw.githubusercontent.com/kelvins/Municipios-Brasileiros/master/csv/municipios.csv\")\n",
-        "city_lat_long.drop(columns = [\"capital\"], inplace = True)\n",
+        "city_lat_long =  pd.read_csv(\"https://raw.githubusercontent.com/fraterno20/fraterno20-python-notebooks/master/Dataset/Dados-Primarios/lat_long_municipios.csv\")\n",
+        "city_lat_long.drop(columns = [\"capital\",\"Unnamed: 0\"], inplace = True)\n",
         "city_lat_long.rename(columns = {\"nome\":\"city\"},inplace = True)\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -278,19 +278,19 @@
       "metadata": {
         "id": "HurIxA8KwvSB",
         "colab_type": "code",
-        "outputId": "12390b29-96fc-443b-98fd-8674be5b1df2",
+        "outputId": "5add6d89-13c6-444e-cc8c-7980e2edc4ad",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
         }
       },
       "source": [
-        "data_ibge = pd.read_excel(\"https://github.com/vilsonrodrigues/COVID19/blob/master/RELATORIO_DTB_BRASIL_MUNICIPIO.xls?raw=true\")\n",
-        "data_ibge.drop(columns = [\"Mesorregião Geográfica\",\"Nome_Mesorregião\",\"Microrregião Geográfica\",\"Nome_Microrregião\",\"Município\"], inplace = True)\n",
+        "data_ibge = pd.read_csv(\"https://raw.githubusercontent.com/fraterno20/fraterno20-python-notebooks/master/Dataset/Dados-Primarios/dados_ibge.csv\")\n",
+        "data_ibge.drop(columns = [\"Mesorregião Geográfica\",\"Nome_Mesorregião\",\"Microrregião Geográfica\",\"Nome_Microrregião\",\"Município\",\"Unnamed: 0\"], inplace = True)\n",
         "data_ibge.rename(columns = {\"Nome_Município\":\"city\",\"Nome_UF\":\"state\",\"UF\":\"codigo_uf\",\"Código Município Completo\":\"codigo_ibge\"},inplace = True)\n",
         "data_ibge.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -377,7 +377,7 @@
       "metadata": {
         "id": "nNA__eDlxEa2",
         "colab_type": "code",
-        "outputId": "5db9c947-2579-4442-baf7-539f3b2fabf2",
+        "outputId": "dfe89ff7-f241-4661-9000-42bb29a51613",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 107
@@ -387,7 +387,7 @@
         "city_lat_long = city_lat_long.merge(data_ibge, on = [\"city\",\"codigo_ibge\",\"codigo_uf\"],sort = \"city\")\n",
         "city_lat_long.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -472,7 +472,7 @@
       "metadata": {
         "id": "dEqV57kS5Fux",
         "colab_type": "code",
-        "outputId": "aa0faa27-7db0-4c15-c10a-442059cd1e22",
+        "outputId": "8c3a958f-35cb-4c52-f8db-e8a27a39b570",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
@@ -483,7 +483,7 @@
         "data_brasil.dropna(subset=[\"date\"],inplace=True)\n",
         "data_brasil.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -528,13 +528,13 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2020-04-01</td>\n",
+              "      <td>2020-04-02</td>\n",
               "      <td>PA</td>\n",
               "      <td>Abaetetuba</td>\n",
               "      <td>city</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>True</td>\n",
               "      <td>157698.0</td>\n",
               "      <td>1500107.0</td>\n",
@@ -547,13 +547,13 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2020-03-31</td>\n",
+              "      <td>2020-04-01</td>\n",
               "      <td>PA</td>\n",
               "      <td>Abaetetuba</td>\n",
               "      <td>city</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
               "      <td>False</td>\n",
               "      <td>157698.0</td>\n",
               "      <td>1500107.0</td>\n",
@@ -570,8 +570,8 @@
             ],
             "text/plain": [
               "         date sigla_state        city  ... longitude  codigo_uf  state\n",
-              "3  2020-04-01          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
-              "4  2020-03-31          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
+              "3  2020-04-02          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
+              "4  2020-04-01          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
               "\n",
               "[2 rows x 16 columns]"
             ]
@@ -598,7 +598,7 @@
       "metadata": {
         "id": "QCLdDJ_s3AN8",
         "colab_type": "code",
-        "outputId": "0d22707d-5dfa-4bf9-9f95-3c5869f439cc",
+        "outputId": "d1f46971-932a-4a61-f071-3ab0ea91865b",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
@@ -609,7 +609,7 @@
         "data_brasil[\"codigo_ibge\"] = data_brasil[\"codigo_ibge\"].astype(\"int64\")\n",
         "data_brasil.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -654,13 +654,13 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2020-04-01</td>\n",
+              "      <td>2020-04-02</td>\n",
               "      <td>PA</td>\n",
               "      <td>Abaetetuba</td>\n",
               "      <td>city</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>True</td>\n",
               "      <td>157698.0</td>\n",
               "      <td>1500107</td>\n",
@@ -673,13 +673,13 @@
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>2020-03-31</td>\n",
+              "      <td>2020-04-01</td>\n",
               "      <td>PA</td>\n",
               "      <td>Abaetetuba</td>\n",
               "      <td>city</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>1.0</td>\n",
+              "      <td>2.0</td>\n",
               "      <td>False</td>\n",
               "      <td>157698.0</td>\n",
               "      <td>1500107</td>\n",
@@ -696,8 +696,8 @@
             ],
             "text/plain": [
               "         date sigla_state        city  ... longitude  codigo_uf  state\n",
-              "3  2020-04-01          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
-              "4  2020-03-31          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
+              "3  2020-04-02          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
+              "4  2020-04-01          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
               "\n",
               "[2 rows x 16 columns]"
             ]
@@ -724,7 +724,7 @@
       "metadata": {
         "id": "Q9o2pfjc6EoO",
         "colab_type": "code",
-        "outputId": "b2196b27-6cc2-4951-fc62-35d7ddcf3b59",
+        "outputId": "32f32fac-5ade-4e3c-ade6-3ef359d95bf9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 161
@@ -734,7 +734,7 @@
         "data_brasil_last_boletim = data_brasil.loc[data_brasil[\"is_last\"] == True,:]\n",
         "data_brasil_last_boletim.head(2)"
       ],
-      "execution_count": 0,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -779,13 +779,13 @@
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>2020-04-01</td>\n",
+              "      <td>2020-04-02</td>\n",
               "      <td>PA</td>\n",
               "      <td>Abaetetuba</td>\n",
               "      <td>city</td>\n",
               "      <td>1.0</td>\n",
               "      <td>0.0</td>\n",
-              "      <td>2.0</td>\n",
+              "      <td>3.0</td>\n",
               "      <td>True</td>\n",
               "      <td>157698.0</td>\n",
               "      <td>1500107</td>\n",
@@ -797,7 +797,7 @@
               "      <td>Pará</td>\n",
               "    </tr>\n",
               "    <tr>\n",
-              "      <th>26</th>\n",
+              "      <th>27</th>\n",
               "      <td>2020-04-01</td>\n",
               "      <td>AC</td>\n",
               "      <td>Acrelândia</td>\n",
@@ -821,8 +821,8 @@
             ],
             "text/plain": [
               "          date sigla_state        city  ... longitude  codigo_uf  state\n",
-              "3   2020-04-01          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
-              "26  2020-04-01          AC  Acrelândia  ...  -66.8972       12.0   Acre\n",
+              "3   2020-04-02          PA  Abaetetuba  ...  -48.8788       15.0   Pará\n",
+              "27  2020-04-01          AC  Acrelândia  ...  -66.8972       12.0   Acre\n",
               "\n",
               "[2 rows x 16 columns]"
             ]
